--- a/package.json
+++ b/package.json
@@ -13,8 +13,16 @@
   "author": "John Lamy <johnclamy@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "next": "^12.0.4",
+    "graphql": "^15.6.1",
+    "graphql-request": "^3.5.0",
+    "html-react-parser": "^1.4.0",
+    "next": "^12.3.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.3.6",
+    "postcss": "^8.3.8",
+    "tailwindcss": "^2.2.7"
   }
 }
